2005-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gtk-doc-plugins.mak:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* gst/ffmpegcolorspace/Makefile.am:
	* gst/ffmpegcolorspace/avcodec.h:
	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	* gst/tcp/gstmultifdsink.c:
	  fix up ffmpegcolorspace docs; extract header

2005-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gtk-doc-plugins.mak:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* ext/theora/Makefile.am:
	* ext/theora/gsttheoraenc.h:
	* ext/theora/theoraenc.c:
	* ext/vorbis/vorbisenc.c:
	  pick up signals and args for vorbis; add some docs for vorbis

2005-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gstdoc-scangobj:
	* common/gtk-doc-plugins.mak:
	* docs/libs/Makefile.am:
	* docs/plugins/gst-plugins-base-plugins.args:
	* docs/plugins/gst-plugins-base-plugins.hierarchy:
	* docs/plugins/gst-plugins-base-plugins.interfaces:
	* docs/plugins/gst-plugins-base-plugins.prerequisites:
	* docs/plugins/gst-plugins-base-plugins.signals:
	  only scanobj stuff from our source module.  Not sure yet
	  if that's correct, given the hierarchy stuff :)

2005-09-15  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/gstaudioconvert.c:
	And enable 24 bits mode as well..

2005-09-15  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/rtp/Makefile.am:
	* gst-libs/gst/rtp/gstbasertppayload.c:
	(gst_basertppayload_get_type), (gst_basertppayload_base_init),
	(gst_basertppayload_class_init), (gst_basertppayload_init),
	(gst_basertppayload_finalize), (gst_basertppayload_setcaps),
	(gst_basertppayload_chain), (gst_basertppayload_set_options),
	(gst_basertppayload_set_outcaps), (gst_basertppayload_push),
	(gst_basertppayload_set_property),
	(gst_basertppayload_get_property),
	(gst_basertppayload_change_state):
	* gst-libs/gst/rtp/gstbasertppayload.h:
	Added rtp payloader base class.
